# sqrzl-emulator

./: .dockerignore  Cargo.toml  Dockerfile  README.md  askr-bug.md  compatibility-matrix.json  compose.yml  pyproject.toml
.github/scripts/: check-no-peas-refs.sh
.github/workflows/: ci.yml  containers.yml  executables.yml
benches/: tier1_hotpath.rs  tier2_subsystem.rs  tier3_admin_api.rs  tier3_system.rs  tier4_integration_azure.rs  tier4_integration_gcs.rs  tier4_integration_oci.rs  tier4_integration_oci_multipart.rs  tier4_integration_oci_multipart_stream.rs  tier4_integration_s3.rs
benches/support/: live_server.rs
docs/: architecture.md  peas-storage-ui-guidelines.md  sqrzl-storage-ui-guidelines.md  support-certification.md
public/: openapi.yml
sdk-tests/: conftest.py  test_azure_sdk.py  test_gcs_sdk.py  test_oci_sdk.py  test_s3_sdk.py
src/: body.rs  compatibility_matrix.rs  config.rs  error.rs  health.rs  hyper_compat.rs  lib.rs  lifecycle.rs  main.rs
src/api/: admin.rs  mod.rs  server.rs
src/api/admin/: dto.rs  pagination.rs  route.rs
src/auth/: admin_session.rs  authenticator.rs  presigned.rs  sigv4.rs
src/blob/: mod.rs
src/models/: bucket.rs  lifecycle.rs  multipart.rs  object.rs  policy.rs
src/providers/: azure.rs  gcs.rs  mod.rs  oci.rs  s3.rs  state.rs
src/server/: http.rs  mod.rs
src/server/handlers/: acl.rs  auth.rs  bucket.rs  cors.rs  mod.rs  object.rs
src/server/handlers/auth/: context.rs  sigv4.rs
src/server/handlers/bucket/: get.rs  helpers.rs  put.rs
src/server/handlers/object/: helpers.rs
src/services/: bucket.rs  mod.rs  object.rs
src/storage/: filesystem.rs  indexed.rs  lockfree_index.rs  mod.rs
src/storage/filesystem/: io.rs
src/utils/: headers.rs  request.rs  validation.rs  xml.rs
src/utils/xml/: parse.rs
tests/: e2e_admin.rs  e2e_azure.rs  e2e_gcs.rs  e2e_oci.rs  e2e_s3.rs  interop_auth.rs  interop_azure.rs  interop_gcs.rs  interop_oci.rs  interop_s3.rs
tests/common/: e2e.rs  interop.rs
ui/: AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
ui/scripts/: seed-sample-data.js
ui/src/: askr-jsx.d.ts  styles.css
ui/src/components/storage/: blob-delete-dialog.tsx  blob-details.tsx  blob-modal.tsx  blob-table.tsx  bucket-delete-dialog.tsx  bucket-modal.tsx  bucket-table.tsx  data-table-section.tsx  storage-dialog-footer.tsx  storage-dialog-form.tsx  storage-dialog-header.tsx  storage-page-header.tsx  storage-search-form.tsx
ui/src/features/auth/: admin-session.ts
ui/src/features/storage/: use-cursor-list.ts  use-delete-target.ts
ui/src/pages/: _routes.tsx
ui/src/pages/app/: _layout.tsx  _routes.tsx  blob.tsx  bucket.tsx  buckets.tsx
ui/src/pages/auth/: login.tsx
ui/src/shared/: routes.ts
ui/tests/: _probe.test.tsx  auth.test.ts  pages.test.tsx  routes.test.ts
