[package]
name = "sqrzl-emulator"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
authors = ["smiggleworth"]
license = "Apache-2.0"
readme = "README.md"
description = "A multi-provider blob and object storage emulator for S3, Azure Blob, GCS, and OCI-compatible workflows"
homepage = "https://github.com/sqrzl/sqrzl-emulator"
documentation = "https://docs.rs/sqrzl-emulator"
repository = "https://github.com/sqrzl/sqrzl-emulator"
keywords = ["s3", "azure", "gcs", "oci", "storage", "emulator"]

[dependencies]
aes-gcm = "0.11"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-skiplist = "0.1"
hex = "0.4"
hmac = "0.13"
http = "1.4"
hyper = { version = "1.10.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "http2"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
md5 = "0.8"
mime_guess = "2"
quick-xml = "0.41.0"
rand = "0.10.2"
sha1 = "0.11.0"
sha2 = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
getrandom = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net", "io-util"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
urlencoding = "2"
uuid = { version = "1.23", features = ["v4", "serde"] }
http-body-util = "0.1"

[dev-dependencies]
cntryl-stress = { git = "https://github.com/cntryl/stress", rev = "ff4b74b3e085fe4dd4dcfc14651273a4262891c0", package = "cntryl-stress" }

[[bench]]
name = "tier1_hotpath"
harness = false

[[bench]]
name = "tier2_subsystem"
harness = false

[[bench]]
name = "tier3_system"
harness = false

[[bench]]
name = "tier3_admin_api"
harness = false

[[bench]]
name = "tier4_integration_s3"
harness = false

[[bench]]
name = "tier4_integration_azure"
harness = false

[[bench]]
name = "tier4_integration_gcs"
harness = false

[[bench]]
name = "tier4_integration_oci"
harness = false

[[bench]]
name = "tier4_integration_oci_multipart"
harness = false

[[bench]]
name = "tier4_integration_oci_multipart_stream"
harness = false

[[bin]]
name = "sqrzl-emulator"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
incremental = false

[profile.test]
incremental = false
